--- a/content/creation/Design_1/k2.md
+++ b/content/creation/Design_1/k2.md
@@ -3,8 +3,7 @@ layout: blog
 title: K2
 date: 2022-02-09T02:11:00.000Z
 featuredimage: /image/kts1.jpg
-images:
-  - src: /image/kts1.jpg
+images: []
 type: content
 descblurb: Packing label heat transfer sticker graphic
 postyear: "2022"
